# multi_goal_navigator

./: CMakeLists.txt  README.md  package.xml
launch/: navigate.launch
src/: multi_goal_navigator.py
