<?xml version="1.0"?>
<package format="2">
  <name>multi_goal_navigator</name>
  <version>0.0.1</version>
  <description>Moves a turtle through multiple waypoints using proportional control.</description>

  <maintainer email="bhoomikakj20@gmail.com">bhoomikakj</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
